<resources>
    <string name="app_name">Travel App</string>
    <string name="let_s_enjoy_the_n_beautiful_world">Let\'s Enjoy The\n Beautiful world</string>
    <string name="explorer_new_places_in_the_worln_nand_get_new_expriences">Explorer new places in the worln\nand get new expriences</string>
    <string name="get_started">Get Started</string>
    <string name="welcome_back">Welcome back</string>
    <string name="jack_willson">Jack_willson</string>
    <string name="discover_the_best_place_n">Discover the Best place\n</string>
    <string name="name">Name</string>
    <string name="discover_the_best_place_nto_travel">Discover the best place\nTo Travel</string>
    <string name="search_location">Search Location</string>
    <string name="popular">Popular</string>
    <string name="see_all">See all</string>
    <string name="category">Category</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="explorer_the_world_with_us">Explorer the \n World with us</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_n_adipiscing_elit_sed_do_eiusmod_tempor">Lorem ipsum dolor sit amet, consectetur \n adipiscing elit, sed do eiusmod tempor</string>
    <string name="get_start">Get Started</string>
    <string name="login">Login</string>
    <string name="streat_address_city">Streat, Address, City...</string>
    <string name="search1">Search</string>
    <string name="enjoy_your_journy_n_without_limits">Enjoy your journy \nwithout limits</string>
    <string name="popular_stays">Popular Stays</string>
    <string name="popular_stays1">Popular Stays</string>
    <string name="home1">Home</string>
    <string name="explorer">Explorer</string>
    <string name="bookmark">Bookmark</string>
    <string name="profile">Profile</string>
    <string name="title">title</string>
    <string name="address">address</string>
    <string name="_5">5</string>
    <string name="_0_night">$0/Night</string>
    <string name="_0">0</string>
    <string name="description">Description</string>
    <string name="description1">description</string>
    <string name="duration">Duration</string>
    <string name="min">min</string>
    <string name="distance">Distance</string>
    <string name="bed">Bed</string>
    <string name="_000">$000</string>
    <string name="check_avilable">Check Avilable</string>
    <string name="check_avilable1">check avilable</string>
    <string name="_1">$000</string>
    <string name="night1">Night</string>
    <string name="avilable">Avilable</string>
    <string name="todo">TODO</string>
    <string name="lkqwjdk">TODO</string>
    <string name="todoqwedqw">TODO</string>
    <string name="shadgdg">TODO</string>
</resources>